--- a/index.html
+++ b/index.html
@@ -696,12 +696,13 @@
             </div>
             <div class="forms" data-aos="flip-down">
                 <div id="inquire" class="form form-1">
-                    <form action="https://formsubmit.co/a7e30cd03e08ec9a6ea74ee052d80b20 " method="POST" id="form-inquire" autocomplete="off"><!--//inquire form old: https://formspree.io/f/xjvjwedk-->
-						<input type="text" name="_honey" style="display: none;">
+                    <form action="https://formsubmit.co/a7e30cd03e08ec9a6ea74ee052d80b20" method="POST" id="form-inquire" autocomplete="off"><!--//inquire form old: https://formspree.io/f/xjvjwedk-->
+			<input type="text" name="_honey" style="display: none;">
                         <input type="hidden" name="_subject" value="Someone would love to help us grow the business!">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_next" value="https://kaye0425.github.io/Website_DASC/messageSent.html">
-                        <input type="hidden" name="_cc" value="khayevillafuerte@gmail.com,coo@da2001.com,kaye@daserve.com,dascbackup2022@gmail.com"> <!--backup email: dascbackup2022@gmail.com || password: Dasc2022-->
+                        <input type="hidden" name="_cc" value="khayevillafuerte@gmail.com,coo@da2001.com,kaye@daserve.com,dascbackup2022@gmail.com"> 
+			<!--backup email: dascbackup2022@gmail.com || password: Dasc2022-->
                         <div class="form-group">
                             <div class="field field-1">
                                 <label for="Name">Name*</label>
