--- a/index.html
+++ b/index.html
@@ -759,10 +759,11 @@
                 <div id="technical-issues" class="form form-2" style="display:none">
                     <form action="https://formsubmit.co/092d86fff7a24c910ce515790d7b2b6a" method="POST" id="form-troubleshoot" autocomplete="off"> <!--//technical assistance form old: https://formspree.io/f/xjvjwedk  https://formspree.io/f/xzbogkww-->
                         <input type="text" name="_honey" style="display: none;">
-						<input type="hidden" name="_subject" value="Someone needs our help!">
+			<input type="hidden" name="_subject" value="Someone needs our help!">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_next" value="https://kaye0425.github.io/Website_DASC/messageSent.html">
-                        <input type="hidden" name="_cc" value="khayevillafuerte@gmail.com,coo@da2001.com,kaye@daserve.com,dascbackup2022@gmail.com"> <!--backup email: dascbackup2022@gmail.com || password: Dasc2022-->
+                        <input type="hidden" name="_cc" value="khayevillafuerte@gmail.com,coo@da2001.com,kaye@daserve.com,dascbackup2022@gmail.com"> 
+			<!--backup email: dascbackup2022@gmail.com || password: Dasc2022-->
                         <div class="form-group">
                             <div class="field field-1">
                                 <label for="Name">Name*</label>
