--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                         <input type="hidden" name="_subject" value="Someone would love to help us grow the business!">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_next" value="https://kaye0425.github.io/Website_DASC/messageSent.html">
-                        <input type="hidden" name="_cc" value="khayevillafuerte@gmail.com,coo@da2001.com,kaye@daserve.com,dascbackup2022@gmail.com"> 
+                        <input type="hidden" name="_cc" value="dascbackup2022@gmail.com"> 
 			<!--backup email: dascbackup2022@gmail.com || password: Dasc2022-->
                         <div class="form-group">
                             <div class="field field-1">
@@ -762,7 +762,7 @@
 			<input type="hidden" name="_subject" value="Someone needs our help!">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_next" value="https://kaye0425.github.io/Website_DASC/messageSent.html">
-                        <input type="hidden" name="_cc" value="khayevillafuerte@gmail.com,coo@da2001.com,kaye@daserve.com,dascbackup2022@gmail.com"> 
+                        <input type="hidden" name="_cc" value="dascbackup2022@gmail.com"> 
 			<!--backup email: dascbackup2022@gmail.com || password: Dasc2022-->
                         <div class="form-group">
                             <div class="field field-1">
