--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
 
                             <div class="field field-4">
                                 <label for="Contact No.">Contact No.</label>
-                                <input type="tel" name="Contact&nbsp;No." id="number-inquire" class="_disabled" autocomplete="off" disabled="true" placeholder=" " required/>
+                                <input type="tel" name="Contact&nbsp;No.&nbsp;" id="number-inquire" class="_disabled" autocomplete="off" disabled="true" placeholder=" " required/>
                             </div>
                         </div>
                         
@@ -782,7 +782,7 @@
 
                             <div class="field field-4">
                                 <label for="Contact No.">Contact No.</label>
-                                <input type="tel" name="Contact&nbsp;No." id="number-tBSHoot" class="_disabled" autocomplete="off" disabled="true" required />
+                                <input type="tel" name="Contact&nbsp;No.&nbsp;" id="number-tBSHoot" class="_disabled" autocomplete="off" disabled="true" required />
                                 <!--<input type="tel" name="Tel. Number" id="number2_TA" class="_disabled"  onkeydown="Check_TA(txtnumber.value)" autocomplete="off" disabled="true" required />-->
                             </div>
                         </div>
