--- a/messageSent.html
+++ b/messageSent.html
@@ -12,7 +12,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <link rel="icon" href="./images/icons/logo_and_dot-ico/message-sent.ico">
-  <link rel="stylesheet" href=".messageSentCSS.css">
+  <link rel="stylesheet" href="messageSentCSS.css">
 </head>
 <body onload="winClose();">
   <section class="Message-sent" id="Message-sent" data-aos="zoom-in">
