--- a/messageSent.html
+++ b/messageSent.html
@@ -13,6 +13,8 @@
 
   <link rel="icon" href="./images/icons/logo_and_dot-ico/message-sent.ico">
   <link rel="stylesheet" href="messageSentCSS.css">
+  
+  <script defer src="messageSentJS.js"></script>
 </head>
 <body onload="winClose();">
   <section class="Message-sent" id="Message-sent" data-aos="zoom-in">
