--- a/pages/messageSent.html
+++ b/pages/messageSent.html
@@ -11,10 +11,10 @@
   <meta name="referrer" content="origin">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="icon" href="../images/icons/logo_and_dot-ico/message-sent.ico">
+  <link rel="icon" href="./images/icons/logo_and_dot-ico/message-sent.ico">
   <link rel="stylesheet" href="../css/messageSentCSS.css">
 
-  <script defer src="../js/messageSentJS.js"></script>
+  <script defer src="./js/messageSentJS.js"></script>
 </head>
 <body onload="winClose();">
   <section class="Message-sent" id="Message-sent" data-aos="zoom-in">
